# bcn-rainfall-core

./: CHANGELOG.md  README.md  config.yml  pyproject.toml
bcn_rainfall_core/: __init__.py  config.py  rainfall.py
bcn_rainfall_core/models/: __init__.py  monthly_rainfall.py  seasonal_rainfall.py  yearly_rainfall.py
bcn_rainfall_core/utils/: __init__.py  custom_exceptions.py  dataframe_operations.py  enums.py  plotly_figures.py  rainfall_metrics.py  schemas.py
tst/: test_config.py  test_rainfall.py
tst/models/: test_monthly_rainfall.py  test_seasonal_rainfall.py  test_yearly_rainfall.py
tst/utils/: test_dataframe_operations.py  test_enums.py  test_plotly_figures.py  test_rainfall_metrics.py
